--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,25 @@
 server.port=9999
 
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+# spring.servlet.multipart.max-file-size=100MB
+# spring.servlet.multipart.max-request-size=100MB
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/hardware_uap?serverTimezone=America/La_Paz&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Password123#@!
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/hardware?serverTimezone=America/La_Paz&useSSL=false&allowPublicKeyRetrieval=true
+# spring.datasource.username=root
+# spring.datasource.password=123456789
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#logging.level.org.hibernate.SQL=debug
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tu_basededatos
+spring.datasource.username=tu_usuario
+spring.datasource.password=tu_contraseña
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/correspondencia
-#spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.hibernate.SQL=debug
-
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#spring.servlet.multipart.max-file-size=100MB
-#spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
