--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,10 @@ server.port=9999
 
 # spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:postgresql://172.16.20.251:5432/hardware_uap
-spring.datasource.username=admin
-spring.datasource.password=usic2022
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/hardware
+spring.datasource.username=postgres
+spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
