--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9999
+server.port=9998
 
 # spring.servlet.multipart.max-file-size=100MB
 # spring.servlet.multipart.max-request-size=100MB
@@ -15,7 +15,7 @@ server.port=9999
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/hardware
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=usic2022
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
