--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<version>6.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version> <!-- Asegúrate de usar la versión más reciente -->
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.2.0.Final</version> <!-- Asegúrate de usar la versión más reciente -->
