--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
-			<version>3.4.0</version>
+			<version>3.4.1</version> <!-- Asegúrate de usar la versión más reciente -->
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
