--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.9-SNAPSHOT</version>
+		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.hardware</groupId>
@@ -24,6 +24,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.3.0</version>
 		</dependency>
 
 		<dependency>
@@ -33,8 +34,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
 			<optional>true</optional>
+			<scope>runtime</scope>
 		</dependency>
 		<!-- <dependency>
 			<groupId>mysql</groupId>
@@ -63,19 +64,27 @@
 			<version>3.4.1</version> <!-- Asegúrate de usar la versión más reciente -->
 		</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>kernel</artifactId>
+			<version>7.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>html2pdf</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports-fonts</artifactId>
-			<version>6.0.0</version>
+			<artifactId>jasperreports</artifactId>
+			<version>6.21.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.13</version> <!-- Asegúrate de usar la versión más reciente -->
+			<artifactId>httpclient</artifactId> <!-- Asegúrate de usar la versión más reciente -->
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.2.0.Final</version> <!-- Asegúrate de usar la versión más reciente -->
+			<artifactId>hibernate-validator</artifactId> <!-- Asegúrate de usar la versión más reciente -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
