--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port=9998
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/hardware
 spring.datasource.username=postgres
-spring.datasource.password=usic2022
+spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # spring.jpa.properties.hibernate.hbm2ddl.auto=update
